testData/diagnostics/const_scope_5.diag.txt
testData/diagnostics/const_scope_5.nut line = (4) column = (8) : error: Unknown variable [x]
else
  print(x)
        ^

